@@ -1,5 +1,5 @@
-DIST ekg2-20100213-scons.tar.lzma 779185 RMD160 d931844c5265241d95681cd08a229835cee6b514 SHA1 0d5f9b8292e2b344a800ffbed435a87cd94947df SHA256 b0f7d1b4d0d2f57db8bee23527db547fd155a9ed44ee815d3f222498e4453468
-EBUILD ekg2-0.3_pre20100213.ebuild 6403 RMD160 8353bf06cbbb7cc325ae7215a09958954fe573fd SHA1 93b342f151de3b391638de8e340b54d5748cdc38 SHA256 3146f99415ca2401ec368ee97a6fc8fd427bd5f7e79cb7c5d418305954fd090b
+DIST ekg2-0.3_pre20100701.tar.lzma 782392 RMD160 780700304993ab4c5b41877b634db623dfa897cf SHA1 36be46cc5f9d373df22c3a8413629c0844fb79db SHA256 25f16b6313a8dda4c8dd24cddacb4f683c331e4016b4faacb18dcdde1751591f
+EBUILD ekg2-0.3_pre20100701.ebuild 6521 RMD160 38b5ac0bdac8793faf1dcf118b76b541fe1cb12b SHA1 88f4e6b875968672a0d9704bbf05d709dbb70e01 SHA256 341e4dc8eeb0e35b71633c5c7021f23c1371e4ce59f096876bd6aec0c278c0d2
 EBUILD ekg2-9999.ebuild 6487 RMD160 2f100948a500778f132f1b8fb13bdc1a2f803aba SHA1 10732264ae0cedbe4306cc99d83281572b807c26 SHA256 b0045943a51bdfc296a9f8e4d73357656962ae8ca81eeaec2632f769d0b3ac5f
-MISC ChangeLog 2370 RMD160 582b75b23e98b8ca193da584f382b2ac7f39bfa8 SHA1 0dfc68753ac779da9ae1dbe46765b580f86a4f0f SHA256 49057a1f6cbf9c219789caf3d32a8e430db99193f437b10a2d4dc88336456294
+MISC ChangeLog 2572 RMD160 811b0b4c2e13f1a578c76f1f9d4e0e1e45a453ef SHA1 e4e4940720460cafbf3b5c728c8ebf439452a8a5 SHA256 73a6c837de6d040ce5576f63845672e4073d5608d2d33034e8ce9ebf61440ebd
 MISC metadata.xml 2477 RMD160 527a26a8873a31a234dc7d3b4945808476915d7d SHA1 0525ad08f1076482e8757a9aae175d2adf20cd20 SHA256 9e9c9f591c32f7e84c9a1c1868888e69d2bc840a2999371bbe22f0ae0d28e2e5
