@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ekg2-0.3_pre20100701 (01 Jul 2010)
+
+  01 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
+  -ekg2-0.3_pre20100213.ebuild, +ekg2-0.3_pre20100701.ebuild:
+  Version bump for new snapshot.
+
   27 Jun 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
   ekg2-0.3_pre20100213.ebuild:
   Update SRC_URI.
